--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-transition-group": "^4.3.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^4.4.1"
   },
   "scripts": {
